# sglang

./: .gitignore  docs.json
.claude/skills/add-sgl-kernel/references/: CMakeLists.txt  scale_kernel.cu  scale_kernel_binding.cpp  scale_kernel_test.py
docs/diffusion/: quantization.md
docs_new/: docs.json
docs_new/cookbook/: intro.mdx
docs_new/cookbook/llm/Moonshotai/: Kimi-K2.5.mdx
docs_new/src/snippets/autoregressive/: qwen35-deployment.jsx
python/: pyproject.toml
python/sglang/multimodal_gen/.claude/skills/sglang-diffusion-modelopt-quant/: SKILL.md
python/sglang/multimodal_gen/.claude/skills/sglang-diffusion-performance/: SKILL.md
python/sglang/multimodal_gen/runtime/: server_args.py
python/sglang/multimodal_gen/runtime/pipelines/: ltx_2_pipeline.py
python/sglang/multimodal_gen/test/: run_suite.py
python/sglang/multimodal_gen/test/server/: perf_baselines.json  test_server_c_bf16_quality.py  test_server_common.py  testcase_configs.py
python/sglang/multimodal_gen/test/unit/: test_transformer_quant.py
python/sglang/srt/: server_args.py
python/sglang/srt/disaggregation/: kv_events.py
python/sglang/srt/layers/utils/: cp_utils.py
python/sglang/srt/managers/: multi_tokenizer_mixin.py  schedule_batch.py  scheduler_communicator.py  tokenizer_communicator_mixin.py
python/sglang/srt/mem_cache/: hiradix_cache.py  radix_cache.py
python/sglang/srt/models/: deepseek_nextn.py  deepseek_v2.py
scripts/ci/utils/: query_job_status.py
test/registered/4-gpu-models/: test_qwen35_fp4_mtp.py  test_qwen35_fp4_mtp_v2.py  test_qwen35_fp4_triton.py
(+4 files in other folders)
